# dstruct

./: .gitignore  README.md  meson.build
src/: avltree.f90  avltree_test.f90  concepts.f90  container.f90  dynamicarray.f90  meson.build  test.f90  test_avltree.f90  test_dynamicarray.f90
