sources += files('concepts.f90')
sources += files('avltree.f90')
sources += files('dynamicarray.f90')

avltree_sources += files('avltree.f90')
avltree_sources += files('concepts.f90')
avltree_sources += files('test_avltree.f90')

dynarray_sources += files('dynamicarray.f90')
dynarray_sources += files('concepts.f90')
dynarray_sources += files('test_dynamicarray.f90')
